# notescribe

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: README.md  main.py  requirements.txt
frontend/: README.md  index.html  script.js  styles.css
notebooks/: 1. Data Exploration.ipynb  2. NER Exploration.ipynb  3. NER Finetuning.ipynb  4. Rebalancing Label.ipynb  utils.py
